seconda parte header

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   </head>
   <body>
     <div class="container">
-      <!-- header -->
-       <header>
-         <div class="row">
+      <div class="contaniner2">
+       <!-- header -->
+         <header>
+           <div class="row">
            <div class="col">
              <div class="lingua">
 
@@ -35,11 +36,22 @@
 
            </div>
 
-         </div>
-       </header>
-      <!-- main -->
+           </div>
 
-      <!-- footer -->
+           <div class="row2">
+             <div class="sfondo">
+
+             </div>
+             <div class="grow">
+
+             </div>
+
+           </div>
+         </header>
+        <!-- main -->
+
+        <!-- footer -->
+      </div>
     </div>
 
   </body>
