main fino alle 3 colonne

--- a/index.html
+++ b/index.html
@@ -48,7 +48,45 @@
 
            </div>
          </header>
+         <!-- buco vuoto -->
+         <div class="vuoto">
+
+         </div>
         <!-- main -->
+        <main>
+          <div class="interno">
+            <div class="parte1">
+
+            </div>
+            <div class="parte2">
+             <div class="suddivisione">
+               <div class="more">
+               </div>
+               <div class="crm">
+               </div>
+             </div>
+            </div>
+            <!-- parte3 -->
+            <div class="parte3">
+                <!-- prima colonna -->
+                <div class="prima schema">
+
+                </div>
+                <!-- seconda colonna -->
+                <div class="seconda schema">
+
+                </div>
+                <!-- terza colonna -->
+                <div class="terza schema">
+
+                </div>
+
+              </div>
+
+            </div>
+          </div>
+
+        </main>
 
         <!-- footer -->
       </div>
