--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
          </div>
         <!-- main -->
         <main>
+          <!-- section 1 -->
           <div class="interno">
             <div class="parte1">
 
@@ -85,6 +86,63 @@
 
             </div>
           </div>
+          <!-- section due -->
+          <div class="community">
+
+          </div>
+          <!-- quattro colonne -->
+          <div class="rettangoli">
+            <!-- prima colonna di quattro -->
+            <div class="first rettang">
+
+            </div>
+            <!-- seconda colonna di quattro -->
+            <div class="second rettang">
+
+            </div>
+            <!-- terza colonna di quattro -->
+            <div class="third rettang">
+
+            </div>
+            <div class="fourth rettang">
+
+            </div>
+            <!-- prima colonna di quattro -->
+            <div class="first rettang">
+
+            </div>
+            <!-- seconda colonna di quattro -->
+            <div class="second rettang">
+
+            </div>
+            <!-- terza colonna di quattro -->
+            <div class="third rettang">
+
+            </div>
+            <div class="fourth rettang">
+
+            </div>
+
+            </div>
+            <!-- section tre -->
+            <div class="followers">
+              <div class="sinistra zona">
+              </div>
+              <div class="destra zona">
+              </div>
+            </div>
+            <!-- section quattro -->
+            <div class="start">
+              <div class="today ambiente">
+
+              </div>
+              <div class="phil ambiente">
+
+              </div>
+
+            </div>
+
+         </div>
 
         </main>
 
