scheletro hubspot completo

--- a/index.html
+++ b/index.html
@@ -134,12 +134,9 @@
             <!-- section quattro -->
             <div class="start">
               <div class="today ambiente">
-
               </div>
               <div class="phil ambiente">
-
               </div>
-
             </div>
 
          </div>
@@ -147,6 +144,24 @@
         </main>
 
         <!-- footer -->
+        <footer>
+          <div class="footer-alto">
+            <div class="traffic section">
+            </div>
+            <div class="connect section">
+            </div>
+            <div class="close section">
+            </div>
+            <div class="support section">
+            </div>
+          </div>
+          <!-- footer basso -->
+          <div class="footer-basso">
+
+          </div>
+        </footer>
+
+
       </div>
     </div>
 
