header con dettagli

--- a/index.html
+++ b/index.html
@@ -2,48 +2,67 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Gayathri:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <title>hubspot</title>
   </head>
   <body>
-    <div class="container">
-      <div class="contaniner2">
+    <div class="content">
        <!-- header -->
          <header>
+           <!-- prima parte header -->
            <div class="row">
-           <div class="col">
-             <div class="lingua">
-
+               <!--parte superiore  -->
+              <div class="col">
+                <div class="lingua">
+                 <i class="fas fa-globe-europe"></i>
+                 <span>English</span>
+                 <i class="fas fa-chevron-down"></i>
+                 <i class="fad fa-exclamation"></i>
+                 <span>Contact Us</span>
+                </div>
+              </div>
+             <div class="col">
+               <div class="buttons">
+                 <i class="fas fa-search"></i>
+                 <button class="log-in" type="button" name="button"> Log in </button>
+                 <button class="get" type="button" name="button">GetHubspotfree</button>
+               </div>
              </div>
-
-           </div>
-           <div class="col">
-             <div class="buttons">
-
+             <!--parte inferiore  -->
+             <div class="col">
+               <div class="logo">
+                 <img src="./img/logo.svg" alt="">
+               </div>
              </div>
-
-           </div>
-           <div class="col">
-             <div class="logo">
-
+             <div class="col">
+               <div class="navigazione">
+                 <ul>
+                   <li>Software</li>
+                   <li><i class="fas fa-chevron-down"></i></li>
+                   <li>Pricing</li>
+                   <li>Resources</li>
+                   <li><i class="fas fa-chevron-down"></i></li>
+                   <li>Partners</li>
+                   <li><i class="fas fa-chevron-down"></i></li>
+                   <li>About</li>
+                   <li><i class="fas fa-chevron-down"></i></i></li>
+                 </ul>
+               </div>
              </div>
-
-           </div>
-           <div class="col">
-             <div class="navigazione">
-
-             </div>
-
-           </div>
 
            </div>
 
            <div class="row2">
-             <div class="sfondo">
-
+             <!-- <div class="sfondo"> -->
+               <img class="jumbo" src="./img/jumbotron.png" alt="">
              </div>
              <div class="grow">
-
+               <h2>There's a better way to grow</h2>
+               <p>Marketing,sales,and software that helps your business grow without compromise. Because "good for the business" should also mean "good for the costumers"</p>
+               <button class="button-get" type="button" name="button-get">GetHotspotFree</button>
+               <p>Got started with a FREE tools, and upgrade as you grow</p>
              </div>
 
            </div>
