--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
           <!-- section 1 -->
           <div class="interno">
             <div class="parte1">
-
+              <img class="integrations" src="./img/Integrations_Illustration.webp" alt="">
+              <h2>Powerful alone better together</h2>
+              <p>Hubspot offers a full stack of software for marketing,sales, and customer service, with a completely free CRM at its core . Their powerful alone - But ever better when used together</p>
             </div>
             <div class="parte2">
              <div class="suddivisione">
