parte2 da completare

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
              <div class="col">
                <div class="buttons">
                  <i class="fas fa-search"></i>
-                 <button class="log-in" type="button" name="button"> Log in </button>
-                 <button class="get" type="button" name="button">GetHubspotfree</button>
+                 <button class="log-in" type="button" name="button"><span> Log in</span> </button>
+                 <button class="get" type="button" name="button"><span>GetHubspotfree</span></button>
                </div>
              </div>
              <!--parte inferiore  -->
@@ -59,9 +59,9 @@
                <img class="jumbo" src="./img/jumbotron.png" alt="">
              </div>
              <div class="grow">
-               <h2>There's a better way to grow</h2>
+               <h1>There's a better way to grow</h1>
                <p>Marketing,sales,and software that helps your business grow without compromise. Because "good for the business" should also mean "good for the costumers"</p>
-               <button class="button-get" type="button" name="button-get">GetHotspotFree</button>
+               <button type="button" name="button-get"><span>GetHotspotFree</span></button>
                <p>Got started with a FREE tools, and upgrade as you grow</p>
              </div>
 
@@ -83,8 +83,28 @@
             <div class="parte2">
              <div class="suddivisione">
                <div class="more">
+                 <img src="./img/CRM-Illustration.svg" alt="">
+                 <button type="button" name="learn more"><span>LearnMore</span></button>
                </div>
                <div class="crm">
+                 <h3>Free Hubspot CRM</h3>
+                 <p>Everything you need to organize,track and build better relationship with lead and customers. Yes it's 100% free. Forever.</p>
+                 <h4>Popolar Features</h4>
+                 <!-- <i class="fal fa-horizontal-rule"></i> -->
+                 <ul>
+                   <li>
+                     <i class="fas fa-check-circle"></i>
+                     contact Insigt
+                   </li>
+                   <li>
+                     <i class="fas fa-check-circle"></i>
+                     Deals
+                   </li>
+                   <li>
+                     <i class="fas fa-check-circle"></i>
+                     Task
+                   </li>
+                 </ul>
                </div>
              </div>
             </div>
@@ -92,7 +112,26 @@
             <div class="parte3">
                 <!-- prima colonna -->
                 <div class="prima schema">
-
+                  <img src="./img/Marketing-Hub-Illustration.svg" alt="">
+                  <h2>Marketing Hub</h2>
+                  <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campain at scale</p>
+                  <i class="line" class="fal fa-horizontal-rule"></i>
+                  <h4>Popolar Feature</h4>
+                  <ul>
+                    <li>
+                      <i class="fas fa-check-circle"></i>
+                      Lead Generations
+                    </li>
+                    <li>
+                      <i class="fas fa-check-circle"></i>
+                      Marketing Automation
+                    </li>
+                    <li>
+                      <i class="fas fa-check-circle"></i>
+                      Analitycs
+                    </li>
+                  </ul>
+                  <button type="button" name="learn more"><span>LearnMore</span></button>
                 </div>
                 <!-- seconda colonna -->
                 <div class="seconda schema">
