--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
              <div class="suddivisione">
                <div class="more">
                  <img src="./img/CRM-Illustration.svg" alt="">
-                 <button type="button" name="learn more"><span>LearnMore</span></button>
+                 <button type="button" name="learn more"><span>Learn More</span></button>
                </div>
                <div class="crm">
                  <h3>Free Hubspot CRM</h3>
@@ -115,7 +115,7 @@
                   <img src="./img/Marketing-Hub-Illustration.svg" alt="">
                   <h2>Marketing Hub</h2>
                   <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campain at scale</p>
-                  <i class="line" class="fal fa-horizontal-rule"></i>
+                  <i class="fal fa-horizontal-rule"></i>
                   <h4>Popolar Feature</h4>
                   <ul>
                     <li>
@@ -135,11 +135,49 @@
                 </div>
                 <!-- seconda colonna -->
                 <div class="seconda schema">
-
+                  <img src="./img/Sales-Professional-Illustration.svg" alt="">
+                  <h2>Sales Hub</h2>
+                  <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campain at scale</p>
+                  <i class="fal fa-horizontal-rule"></i>
+                  <h4>Popolar Feature</h4>
+                  <ul>
+                    <li>
+                      <i class="fas fa-check-circle"></i>
+                      Lead Generations
+                    </li>
+                    <li>
+                      <i class="fas fa-check-circle"></i>
+                      Marketing Automation
+                    </li>
+                    <li>
+                      <i class="fas fa-check-circle"></i>
+                      Analitycs
+                    </li>
+                  </ul>
+                  <button type="button" name="learn more"><span>LearnMore</span></button>
                 </div>
                 <!-- terza colonna -->
                 <div class="terza schema">
-
+                  <img src="./img/Service-Hub-Illustration.svg" alt="">
+                  <h2>Service Hub</h2>
+                  <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campain at scale</p>
+                  <i class="fal fa-horizontal-rule"></i>
+                  <h4>Popolar Feature</h4>
+                  <ul>
+                    <li>
+                      <i class="fas fa-check-circle"></i>
+                      Lead Generations
+                    </li>
+                    <li>
+                      <i class="fas fa-check-circle"></i>
+                      Marketing Automation
+                    </li>
+                    <li>
+                      <i class="fas fa-check-circle"></i>
+                      Analitycs
+                    </li>
+                  </ul>
+                  <button type="button" name="learn more"><span>LearnMore</span></button>
                 </div>
 
               </div>
@@ -148,13 +186,15 @@
           </div>
           <!-- section due -->
           <div class="community">
-
+            <h2>Learn and Grow with award-winning support and a thriving community <p>behind you</p></h2>
+            <p>You don't have to go it alone.Master the inbound methodology and get the most out of your tools with Hubspot's legendary customers support team and a community of thousand of marketing and sales pros just like you</p>
           </div>
           <!-- quattro colonne -->
           <div class="rettangoli">
             <!-- prima colonna di quattro -->
             <div class="first rettang">
-
+              <img src="./homepage_community_agency.svg" alt="">
+              <span>150 +</span>
             </div>
             <!-- seconda colonna di quattro -->
             <div class="second rettang">
