progetto quasi completo, da sistemare

--- a/index.html
+++ b/index.html
@@ -191,51 +191,94 @@
           </div>
           <!-- quattro colonne -->
           <div class="rettangoli">
-            <!-- prima colonna di quattro -->
-            <div class="first rettang">
+            <!-- prima colonna-->
+            <div class="first rettang bt">
               <img src="./homepage_community_agency.svg" alt="">
               <span>150 +</span>
+              <h5>Hubspot user groups</h5>
             </div>
-            <!-- seconda colonna di quattro -->
-            <div class="second rettang">
-
+            <!-- seconda colonna-->
+            <div class="second rettang bt">
+              <img src="./homepage_community_blog.svg" alt="">
+              <span>4.5M +</span>
+              <h5>Monthly visits</h5>
             </div>
-            <!-- terza colonna di quattro -->
-            <div class="third rettang">
-
+            <!-- terza colonna-->
+            <div class="third rettang bt">
+              <img src="./homepage_community_academy.svg" alt="">
+              <span>155K +</span>
+              <h5>certified professional</h5>
             </div>
-            <div class="fourth rettang">
-
+            <!-- quarta colonna -->
+            <div class="fourth rettang bt">
+              <img src="./homepage_community_connect.svg" alt="">
+              <span>21K +</span>
+              <h5>registred attendees</h5>
             </div>
-            <!-- prima colonna di quattro -->
+            <!-- quinta colonna-->
             <div class="first rettang">
-
+              <img src="./homepage_community_connect.svg" alt="">
+              <span>200 +</span>
+              <h5>integrations</h5>
             </div>
-            <!-- seconda colonna di quattro -->
+            <!-- sesta colonna-->
             <div class="second rettang">
-
+              <img src="./homepage_community_globe.svg" alt="">
+              <span>6 +</span>
+              <h5>languages</h5>
             </div>
-            <!-- terza colonna di quattro -->
+            <!-- settima colonna -->
             <div class="third rettang">
-
+              <img src="./homepage_community_followers.svg" alt="">
+              <span>2.6M +</span>
+              <h5>social followes</h5>
             </div>
+            <!-- ottava colonna -->
             <div class="fourth rettang">
-
+              <img src="./growhthhub-white-small.svg" alt="">
+              <span>5K +</span>
+              <h5>profiles and counting</h5>
             </div>
 
             </div>
             <!-- section tre -->
             <div class="followers">
               <div class="sinistra zona">
+                <h3>64,500</h3>
+                <ul>
+                  <li>customer in over <strong>100</strong></li>
+                  <li>countries growing their</li>
+                  <li>businesses with Hubspot</li>
+                </ul>
+                <!-- <p>customer in over <strong>100</strong></p>
+                <p>countries growing their</p>
+                <p>businesses with Hubspot</p> -->
               </div>
               <div class="destra zona">
+                <ul>
+                  <li><img src="./img/Atlassian-horizontal-blue.webp" alt="Atlassian"> </li>
+                  <li><img src="./img/doordash_owler.webp" alt="doordash"></li>
+                  <li><img src="g2crowd.webp" alt="g2crowd"></li>
+                  <li><img src="./img/purple-logo.webp" alt="purple"></li>
+                </ul>
+                <ul>
+                  <li><img src="./img/Subaru_Logo.webp" alt="subaru"></li>
+                  <li><img src="./img/Wistia_logo.webp" alt="wistia"></li>
+                  <li><img src="Classpass-logo.webp" alt="classpass"></li>
+                  <li><img src="./img/VMware_logo.webp" alt="vmware"></li>
+                </ul>
               </div>
             </div>
             <!-- section quattro -->
             <div class="start">
               <div class="today ambiente">
+                <h2>Start growing with Hubspot today</h2>
+                <p>With tools to make every part of your process human and a support team extited to hel you, getting started with inbound has never been easier</p>
+                <button type="button" name="button-get"><span>GetHotspotFree</span></button>
+                <p>Get started with a FREE tools, and upgrade as you grow</p>
               </div>
               <div class="phil ambiente">
+                <img src="./img/woman.webp" alt="woman">
               </div>
             </div>
 
@@ -247,17 +290,85 @@
         <footer>
           <div class="footer-alto">
             <div class="traffic section">
+              <h4>Increase your traffic</h4>
+              <ul>
+                <li>Ad Software</li>
+                <li>Blog Software</li>
+                <li>SEO Software</li>
+                <li>Social Media Software</li>
+                <li>Content Managment System</li>
+              </ul>
             </div>
             <div class="connect section">
+              <h4>Increase your traffic</h4>
+              <ul>
+                <li>Ad Software</li>
+                <li>Blog Software</li>
+                <li>SEO Software</li>
+                <li>Social Media Software</li>
+                <li>Content Managment System</li>
+              </ul>
             </div>
             <div class="close section">
+              <h4>Increase your traffic</h4>
+              <ul>
+                <li>Ad Software</li>
+                <li>Blog Software</li>
+                <li>SEO Software</li>
+                <li>Social Media Software</li>
+                <li>Content Managment System</li>
+              </ul>
             </div>
             <div class="support section">
+              <h4>Increase your traffic</h4>
+              <ul>
+                <li>Ad Software</li>
+                <li>Blog Software</li>
+                <li>SEO Software</li>
+                <li>Social Media Software</li>
+                <li>Content Managment System</li>
+              </ul>
+              <button type="button" name="button">Contact HubSpotSupport</button>
+              <ul class="social">
+                <li><i class="fab fa-facebook-f"></i></li>
+                <li><i class="fab fa-instagram"></i></li>
+                <li><i class="fab fa-youtube"></i></li>
+                <li><i class="fab fa-twitter"></i></li>
+                <li><i class="fab fa-linkedin-in"></i></li>
+              </ul>
             </div>
           </div>
           <!-- footer basso -->
           <div class="footer-basso">
+            <div class="lenguage">
+              <ul>
+                <li>English</li>
+                <li>Deutch</li>
+                <li>Japan</li>
+                <li>Espanol</li>
+                <li>Portogues</li>
+                <li>Francais</li>
+              </ul>
+            </div>
+            <hr>
+              <!-- <span>Copyright<i class="far fa-copyright"></i>2019 HubSpot, inc.</span> -->
 
+            <div class="last-section">
+              <div class="copy">
+                <img src="./img/hubspot-logo-footer.svg" alt="logo">
+              <!-- <div class="legal">
+                Legal Stuff
+              </div>
+              <div class="policy">
+                Privacy Policy
+              </div> -->
+              <ul>
+                <li>Legal Stuff</li>
+                <li>Privacy Policy</li>
+              </ul>
+            </div>
+
+            </div>
           </div>
         </footer>
 
